# subscriptions

./: .env.example  .gitignore  AGENTS.md  Makefile  requirements.md
.github/workflows/: main.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202411150001_initial_schema.py  202411180001_add_email_verification_tokens.py  202411180002_expand_session_tokens_length.py  202502100001_add_oauth_pkce_and_email_verification.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  health.py  notifications.py  subscriptions.py  telegram.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  migrations.py  session.py
backend/app/models/: __init__.py  base.py  subscription.py  user.py
backend/app/schemas/: __init__.py  auth.py  notification.py  subscription.py  telegram.py  user.py
backend/app/services/: audit.py  auth.py  email.py  email_verification.py  jwt.py  subscriptions.py  telegram_bot.py  telegram_link.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
frontend/src/api/: auth.ts  client.ts  subscriptions.ts  telegram.ts
frontend/src/components/: ConfirmDialog.tsx  EmptyState.tsx  FiltersBar.tsx  Footer.tsx  HeaderNav.tsx  Layout.tsx  LoadingState.tsx  ReminderList.tsx  Sparkline.tsx  StatsCards.tsx  StatusBadge.tsx  SubscriptionCard.tsx  SubscriptionForm.tsx  TelegramLinkCard.tsx  (+3 more)
(+28 files in other folders)
